--- a/templates/problem.html
+++ b/templates/problem.html
@@ -94,17 +94,11 @@
 
         <div class="right-panel">
             <div class="editor-header">
-                <select class="language-select" id="languageSelect">
+                <select id="languageSelect" class="language-select">
                     <option value="71">Python 3</option>
                     <option value="63">JavaScript</option>
                     <option value="62">Java</option>
-                    <option value="50">C</option>
                     <option value="54">C++</option>
-                    <option value="51">C#</option>
-                    <option value="68">PHP</option>
-                    <option value="72">Ruby</option>
-                    <option value="73">Rust</option>
-                    <option value="60">Go</option>
                 </select>
                 <div class="editor-actions">
                     <button class="btn btn-run" id="runBtn">
